--- a/BreakDown-web/src/main/webapp/index.html
+++ b/BreakDown-web/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 	
 	<!-- Angular Material style sheet -->
-  	<link rel=" newest stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+  	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 
 	<!-- Angular Material requires Angular.js Libraries -->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
@@ -25,52 +25,33 @@
 
 	<!-- Angular Material Library -->
 	<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
-  
-  	
+	
+	<!-- Own AngularJS files -->
 	<script src="resources/angularjs/main.js"></script>
 	<script src="resources/angularjs/controllers/mainController.js"></script>
 	<script src="resources/angularjs/controllers/regController.js"></script>
 	<script src="resources/angularjs/controllers/loginController.js"></script>
+	<script src="resources/angularjs/controllers/compsController.js"></script>
+	<script src="resources/angularjs/controllers/newCompController.js"></script>
+	<script src="resources/angularjs/controllers/sideNavController.js"></script>
 	<script src="resources/angularjs/directives.js"></script>
 	
-
+	<!-- Own CSS Files -->
+	<link rel="stylesheet" type="text/css" href="resources/css/index.css">
+	
 </head>
 <body data-ng-app="BreakDownApp" data-ng-controller="mainController">
 	<div data-ng-cloak layout="column" layout-fill>
-			<header>
-				<md-nav-bar class="md-primary" nav-bar-aria-label="navigáció" md-selected-nav-item="currentNavItem" hide-xs>
-					<md-nav-item name="index" md-nav-href="#/">BreakDown</md-nav-item>
-					<md-nav-item name="reg" md-nav-href="#reg" ng-hide="authenticated">
-						Regisztráció
-					</md-nav-item>
-					<md-nav-item md-nav-href="#login" name="login" ng-hide="authenticated">
-						Bejelentkezés
-					</md-nav-item>
-					<md-nav-item md-nav-click="goto('page3')" name="page3">
-						Versenyek
-					</md-nav-item>
-					<md-nav-item md-nav-click="goto('page4')" name="page4">
-						Keresés
-					</md-nav-item>
-					<md-nav-item md-nav-click="goto('page5')" name="page5">
-						GYIK
-					</md-nav-item>
-				</md-nav-bar>
-			</header>
-			<main flex>
+			<div flex="10" data-ng-include="'pages/header.html'"></div>
+			<main flex="110">
 				<div class="ext-content">
 					<div class="container">
-						<div data-ng-view ></div>
+						<div data-ng-view></div>
 					</div>
 				</div>
 			</main>
-				<footer>
-					<md-toolbar>
-						<div class="md-accent" layout="row" layout-align="center center" flex>
-							© Copyright - BreakDown
-						</div>
-					</md-toolbar>
-				</footer>
+			<div id="footer" flex hide-gt-xs data-ng-include="'pages/footergtxs.html'"></div>
+			<div id="footer" flex hide-xs data-ng-include="'pages/footerxs.html'"></div>
 	</div>
 </body>
 </html>
