--- a/BreakDown-web/src/main/webapp/pages/competitions.html
+++ b/BreakDown-web/src/main/webapp/pages/competitions.html
@@ -1,5 +1,5 @@
 <div layout="column" layout-margin data-ng-controller="compsController" flex>
-	<h1 class="md-display-1">Versneyek</h1>
+	<h1 class="md-display-1">Versenyek</h1>
 	<md-button class="md-accent" type="submit" href="#newcomp">
 		Új verseny
 	</md-button>
