--- a/BreakDown-web/src/main/webapp/pages/compsuccess.html
+++ b/BreakDown-web/src/main/webapp/pages/compsuccess.html
@@ -1,4 +1,4 @@
 <div layout="column" layout-margin layout-align="center center">
-	<h1 class="md-display-3">Sikeresen léterhozta a versenyt!!</h1>
+	<h1 class="md-display-3">Sikeresen léterhozta a versenyt!</h1>
 	<br><br>
 </div>
