--- a/BreakDown-web/src/main/webapp/pages/competitions.html
+++ b/BreakDown-web/src/main/webapp/pages/competitions.html
@@ -1,15 +1,15 @@
 <div layout="column" layout-margin data-ng-controller="compsController" flex>
 	<h1 class="md-display-1">Versenyek</h1>
-	<md-button class="md-accent" type="submit" href="#newcomp">
-		Új verseny
+	<md-button class="md-accent" type="submit" href="#newcomp" data-ng-show="user.role=='ORGANIZER' || user.role=='ADMIN'">
+		Új verseny + {{user.role}}
 	</md-button>
 	<md-content layout="row">
 		<div ng-repeat="x in cards">
 			<md-card md-theme="default" md-theme-watch>
 	        <md-card-title>
 	          <md-card-title-text>
-	            <span class="md-headline">{{x.title}}</span>
-	            <span class="md-subhead">{{x.titlke}}</span>
+	            <span class="md-headline">{{x.name}}</span>
+	            <span class="md-subhead">{{x.description}}</span>
 	          </md-card-title-text>
 	          <md-card-title-media>
 	            <div class="md-media-lg card-media">
