--- a/BreakDown-web/src/main/webapp/index.html
+++ b/BreakDown-web/src/main/webapp/index.html
@@ -36,6 +36,8 @@
 	<script src="resources/angularjs/controllers/sideNavController.js"></script>
 	<script src="resources/angularjs/directives.js"></script>
 	
+	<script src="resources/momentjs/moment.js"></script>
+	
 	<!-- Own CSS Files -->
 	<link rel="stylesheet" type="text/css" href="resources/css/index.css">
 	
