Implemented signing up for competitions.

--- a/BreakDown-web/src/main/webapp/index.html
+++ b/BreakDown-web/src/main/webapp/index.html
@@ -34,6 +34,7 @@
 	<script src="resources/angularjs/controllers/compsController.js"></script>
 	<script src="resources/angularjs/controllers/newCompController.js"></script>
 	<script src="resources/angularjs/controllers/sideNavController.js"></script>
+	<script src="resources/angularjs/controllers/singleCompController.js"></script>
 	<script src="resources/angularjs/directives.js"></script>
 	
 	<script src="resources/momentjs/moment.js"></script>
