--- a/BreakDown-web/src/main/webapp/pages/header.html
+++ b/BreakDown-web/src/main/webapp/pages/header.html
@@ -1,5 +1,5 @@
 <header>
-	<md-nav-bar class="md-primary" nav-bar-aria-label="navigáció" md-selected-nav-item="currentNavItem" hide-xs>
+	<md-nav-bar class="md-primary" nav-bar-aria-label="navigáció" md-selected-nav-item="currentNavItem" hide-xs md-no-ink-bar="true">
 		<md-nav-item md-nav-href="#/" name="index">BreakDown</md-nav-item>
 		<md-nav-item md-nav-href="#reg" ng-hide="authenticated">
 			Regisztráció
