--- a/BreakDown-web/src/main/webapp/pages/newcompetition.html
+++ b/BreakDown-web/src/main/webapp/pages/newcompetition.html
@@ -45,7 +45,7 @@
 						<label>Házszám</label>
 						<input type="text" data-ng-model="housenumber" name="housenumber" data-ng-pattern="/^[0-9]+[a-zA-Z]?(-[0-9]+[a-zA-Z]?)*$/" required>
 						<div data-ng-messages="newComp.housenumber.$error">
-							<div data-ng-message="pattern">Helytelen formátum!</div>
+							<div data-ng-message="pattern">Helytelen formátum! (pl.: 10, 10A, 10A-11)</div>
 						</div>
 					</md-input-container>
 				</div>
