Impelemnted user profil modifications.

--- a/BreakDown-web/src/main/webapp/index.html
+++ b/BreakDown-web/src/main/webapp/index.html
@@ -35,6 +35,7 @@
 	<script src="resources/angularjs/controllers/newCompController.js"></script>
 	<script src="resources/angularjs/controllers/sideNavController.js"></script>
 	<script src="resources/angularjs/controllers/singleCompController.js"></script>
+	<script src="resources/angularjs/controllers/profilController.js"></script>
 	<script src="resources/angularjs/directives.js"></script>
 	
 	<script src="resources/momentjs/moment.js"></script>
