--- a/BreakDown-web/src/main/webapp/pages/home.html
+++ b/BreakDown-web/src/main/webapp/pages/home.html
@@ -1,5 +1,28 @@
-<div layout="column" layout-align="center center">
-	<h1 class="md-display-4">Break Down</h1>
-	<h3 class="md-display-1">Ne a keresés miatt törd a fejed.</h3>
-	<br><br>
+<div layout="column" layout-align="center stretch">
+	<div layout="column" layout-align="center center">
+		<h1 class="md-display-4">Break Down</h1>
+		<h3 class="md-display-1">Ne a keresés miatt törd a fejed.</h3>
+		<br><br>
+	</div>
+	<div data-ng-controller="homeController" ng-if="user!=null" >
+	<md-toolbar class="md-accent">
+				<div class="md-toolbar-tools">
+					Érdekelt városokban megrendezett versenyek
+				</div>
+			</md-toolbar>
+		<md-list data-ng-repeat="comps in compsInCities" layout-align="start stretch">
+			<md-subheader>{{comps.city}}</md-subheader>
+			<md-list-item class="md-3-line" data-ng-repeat="competition in comps.comp">
+				<div class="md-list-item-text" layout="column">
+	            	<h3>{{competition.name}}</h3>
+	            	<h4>{{competition.startTime | date : 'yyyy:MM:dd'}}</h4>
+	            	<p>{{competition.organizer}}</p>
+	         	</div>
+	         	<md-button class="md-secondary md-primary" data-ng-click="seeComp(competition.id)">További infók</md-button>
+	         	<md-divider data-ng-if="!$last"></md-divider>
+			</md-list-item>
+			<md-divider ng-if="!$last"></md-divider>
+			<p data-ng-show="events.length == 0">Nincs esemény hozzáadva</p>
+		</md-list>
+	</div>
 </div>
