--- a/BreakDown-web/src/main/webapp/pages/home.html
+++ b/BreakDown-web/src/main/webapp/pages/home.html
@@ -16,7 +16,7 @@
 				<div class="md-list-item-text" layout="column">
 	            	<h3>{{competition.name}}</h3>
 	            	<h4>{{competition.startTime | date : 'yyyy:MM:dd'}}</h4>
-	            	<p>{{competition.organizer}}</p>
+	            	<p>Jelentkzők száma: {{competition.competitorIds.length}}</p>
 	         	</div>
 	         	<md-button class="md-secondary md-primary" data-ng-click="seeComp(competition.id)">További infók</md-button>
 	         	<md-divider data-ng-if="!$last"></md-divider>
