--- a/BreakDown-web/src/main/webapp/pages/newcompetition.html
+++ b/BreakDown-web/src/main/webapp/pages/newcompetition.html
@@ -1,4 +1,4 @@
-<div layout="column" layout-margin data-ng-show="user.role=='ORGANIZER' || user.role=='ADMIN'">
+<div layout="column" layout-margin data-ng-if="user.role=='ORGANIZER' || user.role=='ADMIN'">
 	<div layout="column">
 		<div layout-gt-sm="row">
 			<form id="newComp" name="newComp" flex-gt-sm="70" layout-margin data-ng-submit="createComp(newComp)">
@@ -152,6 +152,6 @@
 		<md-button class="md-primary" type="submit" form="newComp" >Verseny létrehozása</md-button>
 	</div>
 </div>
-<div data-ng-show="user.role== 'USER' || user==null">
+<div data-ng-if="user.role== 'USER'">
 	Ön nem rendelkezik Szervezői jogosultsággal!
 </div>
