--- a/BreakDown-web/src/main/webapp/pages/competitorsdialog.html
+++ b/BreakDown-web/src/main/webapp/pages/competitorsdialog.html
@@ -4,7 +4,7 @@
 			<h2>Jelentkezett versenyzők</h2>
 		</div>
 	</md-toolbar>
-	<md-dialog-content layout="column">
-		<span data-ng-repeat="competitor in competitors">{{competitor}}</span>		
+	<md-dialog-content layout="column" layout-padding layout-margin>
+		<span data-ng-repeat="competitor in competitors" >{{competitor}}</span>		
 	</md-dialog-content>
 </md-dialog>
