--- a/BreakDown-web/src/main/webapp/pages/newcompetition.html
+++ b/BreakDown-web/src/main/webapp/pages/newcompetition.html
@@ -149,6 +149,9 @@
 		<div md-colors="{color: 'warn'}" data-ng-show="badDate">
 			Mai napnál korábbi dátumot nem lehet megadni!
 		</div>
+		<div md-colors="{color: 'warn'}" data-ng-show="noEvents">
+			Muszáj eseményeket hozzáadnia!
+		</div>
 		<md-button class="md-primary" type="submit" form="newComp" >Verseny létrehozása</md-button>
 	</div>
 </div>
