--- a/BreakDown-web/src/main/webapp/pages/newcompetition.html
+++ b/BreakDown-web/src/main/webapp/pages/newcompetition.html
@@ -56,7 +56,7 @@
 						<div data-ng-message="md-maxlength">Maximum 255 karakter hoszzú leírást adhat meg!</div>
 					</div>
 				</md-input-container>
-				<md-chips data-ng-model="diskjockeys" name="diskjockeys" placeholder="Adja meg a DJ-ket..">
+				<md-chips data-ng-model="diskjockeys" name="diskjockeys" placeholder="Adja meg a DJ-ket(enter)">
 					<md-chip-template>
 						<strong>{{$chip}}</strong>
 					</md-chip-template>
